more config tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,3 +2,11 @@
 unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
+
+#vim style pane selection keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+run-shell ~/repos/tmux-cpu/cpu.tmux
